[tool.poetry]
name = "Topological data analysis"
version = "0.1"
description = ""
authors = ["saimuttavarapu <sai.muttavarapu501@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "*"
onnx = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
